fixed issues with contrast and form

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -344,4 +344,5 @@ form button {
     border-radius: 15px;
     height: 50%;
     width: 100%;
+    color: black;
 }
